# ndml

./: .gitignore  CMakeLists.txt  README.md
include/ndml/: fwd.hpp  mat.hpp  meta.hpp  ndml.hpp  quat.hpp  vec.hpp
include/ndml/mat/: mat.hpp  mat.inl  operation.hpp  operation.inl  transform.hpp  transform.inl
include/ndml/meta/: burn.hpp  burn.inl  functional.hpp  functional.inl
include/ndml/quat/: operation.hpp  operation.inl  quat.hpp  quat.inl  transform.hpp  transform.inl
include/ndml/vec/: operation.hpp  operation.inl  vec.hpp  vec.inl
